# real-time-prediction

./: .gitignore  Makefile  README.md  zaaa.txt
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
image/: bash.txt
services/price_predictor/: Dockerfile  Makefile  app.yaml  install_talib.txt  pyproject.toml
services/price_predictor/src/: api.py  config.py  feature_engineering.py  hopsworks_api.py  main.py  ohlc_data_reader.py  preprocessing.py  price_predictor.py  training.py  utils.py
services/price_predictor/src/models/: current_price_baseline.py  moving_average_baseline.py  xgboost_model.py
services/price_predictor/tests/: test_utils.py
services/t_ingest/: Makefile  example.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml
services/t_ingest/src/: config.py  kraken_websocket_api.py  main.py
services/t_push/: Makefile  historical.dev.env  live.prod.env  pyproject.toml
services/t_push/src/: config.py  databrocks.py  hopsworks_api.py  main.py
services/t_transform/: Dockerfile  Makefile  dev.env  live.prod.env  pyproject.toml
services/t_transform/src/: config.py  main.py
