[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["carrickcheah <carrick113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
quixstreams = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
